# py-models-parser

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: README.rst
py_models_parser/: __init__.py  cli.py  core.py  grammar.py  test.py  types.py  utils.py  visitor.py
py_models_parser/parsers/: pydal.py
tests/: test_dataclasses.py  test_django.py  test_encode_orm.py  test_enums.py  test_gino_models.py  test_piccolo.py  test_pony.py  test_py_models_parser.py  test_pydal.py  test_pydantic.py  test_python_class.py  test_sqlalchemy.py  test_tortoise.py
tests/data/: dataclass_defaults.py  gino_models.py
