[tool.poetry]
name = "py-models-parser"
version = "0.6.0"
description = "Parser for Different Python Models (Pydantic, Enums, ORMs: Tortoise, SqlAlchemy, GinoORM, PonyORM, Pydal tables) to extract information about columns(attrs), model, table args,etc in one format."
authors = ["Iuliia Volkova <xnuinside@gmail.com>"]
license = "MIT"
readme = "docs/README.rst"
homepage = "https://github.com/xnuinside/py-models-parser"
repository = "https://github.com/xnuinside/py-models-parser"
classifiers = [
    "Programming Language :: PL/SQL",
    "Programming Language :: SQL",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
parsimonious = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
twine = "^3.4.1"
m2r = "^0.2.1"

[tool.poetry.scripts]
pmp = 'py_models_parser.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
